<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


<PreferenceCategory
    android:title="@string/title_settings">

    <Preference android:title="@string/preference_login_title"
        android:key="preference_login"
        android:summary="@string/preference_login_details"/>

    <SwitchPreference android:title="@string/preference_thermostat_active_title"
        android:defaultValue="false"
        android:summary="@string/preference_thermostat_active_details"
        android:key="preference_thermostat_active" />

    <ListPreference android:title="@string/preference_thermostat_select_title"
        android:summary="@string/preference_thermostat_select_details"
        android:key="preference_thermostat_selected"
        />

    <ListPreference android:title="@string/preference_thermostat_mode_select_title"
        android:summary="@string/preference_thermostat_mode_select_details"
        android:key="preference_thermostat_mode_selected"
        android:entries="@array/preferences_mode"
        android:entryValues="@array/preferences_mode_values" />
</PreferenceCategory>


</PreferenceScreen>